# self-sovereign-ai

./: .gitignore  Makefile  README.md  chat.py  config.py  docker-compose.yml  main.py  openai_server.py  proxy_402.py  pyproject.toml  schemas.py  send_request.py  utils.py
aperture/: aperture.yml
data/: models.yml
pages/: buy_a_bitcoin_agent.py
tor/: Dockerfile  torrc
